[package]
name = "curl-sys"
version = "0.4.83+curl-8.15.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "curl"
build = "build.rs"
license = "MIT"
repository = "https://github.com/alexcrichton/curl-rust"
description = "Native bindings to the libcurl library"
documentation = "https://docs.rs/curl-sys"
categories = ["external-ffi-bindings"]
edition = "2018"
exclude = ["curl/docs/", "curl/tests/"]

[lib]
name = "curl_sys"
path = "lib.rs"

[dependencies]
libz-sys = { version = "1.0.18", default-features = false, features = ["libc"] }
libc = "0.2.2"
libnghttp2-sys = { optional = true, version = "0.1.3" }
libnghttp3-sys = { optional = true, git = "https://github.com/CyanProjects/nghttp3-rs" }
libngtcp2-sys = { optional = true, git = "https://github.com/CyanProjects/ngtcp2-rs" }
openssl-sys = { optional = true, version = "0.9.109" }
boring-sys = { optional = true, version = "4.17.0" }
#boring-sys = { version = "4.17.0" }

[dependencies.rustls-ffi]
version = "0.15"
optional = true
features = ["no_log_capture"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Networking_WinSock"] }

[target.'cfg(all(unix))'.dependencies]
openssl-probe = { version = "0.1.2", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[build-dependencies]
pkg-config = "0.3.3"
cc = "1.0"

[features]
default = []
ssl-probe = ["openssl-probe"]
openssl = ["openssl-sys"]
boring = ["boring-sys"]
windows-static-ssl = []
openssl-vendored = ["openssl", "openssl-sys/vendored"]
openssl-aws-lc = ["openssl", "openssl-sys/aws-lc"]
http2 = ["libnghttp2-sys"]
http3-nghttp3-ngtcp2 = ["libnghttp3-sys", "libngtcp2-sys", "openssl", "libngtcp2-sys/openssl"]
http3-nghttp3-openssl-quic = ["libnghttp3-sys", "openssl"]
http3-nghttp3-ngtcp2-bssl = ["libnghttp3-sys", "libngtcp2-sys", "boring", "libngtcp2-sys/boringssl"]
http3-nghttp3-bssl-quic = ["libnghttp3-sys", "boring"]
mesalink = []
rustls = ["rustls-ffi"]
static-curl = []
spnego = []
force-system-lib-on-osx = []
protocol-ftp = []
zlib-ng-compat = ["libz-sys/zlib-ng", "static-curl"]
upkeep_7_62_0 = []
poll_7_68_0 = []
ntlm = []
